<resources>
    <string name="app_name">Xploit</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Главная</string>

    <string name="menu_gallery">Библиотека</string>
    <string name="vk_library">VK Music</string>
    <string name="spotify_library">Spotify</string>
    <string name="import_playlist">Импортировать плейлист</string>
    <string name="playlists">Плейлисты</string>
    <string name="playlists_empty">Пусто ¯\\_(ツ)_/¯</string>

    <string name="menu_slideshow">Настройки</string>

    <string name="notification_channel_name">Player controls</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="stop">Stop</string>

    <string name="previous">Previous</string>
    <string name="next">Next</string>
</resources>