<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.library.LibraryFragment">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/menu_gallery"
        android:textColor="@color/black"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:shadowRadius="0"
        app:cardCornerRadius="100dp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textView2">

        <ImageButton
            android:id="@+id/ib_addPlaylist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:background="?android:selectableItemBackground"
            android:src="@drawable/ic_baseline_add_24"
            app:layout_constraintBottom_toBottomOf="@+id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textView2"/>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_addPlaylist"
        android:animateLayoutChanges="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <TextView
            android:id="@+id/tv_Songs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/import_playlist"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_vk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:shadowRadius="0"
            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_Songs">

            <ImageButton
                android:id="@+id/ib_vk"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="?android:selectableItemBackground"
                android:scaleType="fitXY"
                android:src="@drawable/vk_library"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vk_library"
            app:layout_constraintEnd_toEndOf="@+id/cv_vk"
            app:layout_constraintStart_toStartOf="@+id/cv_vk"
            app:layout_constraintTop_toBottomOf="@+id/cv_vk" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_spotify"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginStart="15dp"
            android:shadowRadius="0"
            app:cardCornerRadius="100dp"
            app:layout_constraintStart_toEndOf="@+id/cv_vk"
            app:layout_constraintTop_toBottomOf="@+id/tv_Songs">

            <ImageButton
                android:id="@+id/ib_spotify"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="?android:selectableItemBackground"
                android:scaleType="fitXY"
                android:src="@drawable/spotify_library"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.cardview.widget.CardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spotify_library"
            app:layout_constraintEnd_toEndOf="@+id/cv_spotify"
            app:layout_constraintStart_toStartOf="@+id/cv_spotify"
            app:layout_constraintTop_toBottomOf="@+id/cv_vk" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/tv_playlists"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="8dp"
        android:text="@string/playlists"
        android:textColor="@color/black"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_addPlaylist" />

    <TextView
        android:id="@+id/tv_nothing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/playlists_empty"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_playlists" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_playlists"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintTop_toBottomOf="@+id/tv_playlists"
        tools:layout_editor_absoluteX="0dp"
        tools:listitem="@layout/playlist_item" />

</androidx.constraintlayout.widget.ConstraintLayout>